# OpenLogisticERP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  skills-lock.json
alembic/: env.py
alembic/versions/: 0f279c1d8682_campo_despacho_a├▒adido_a_viaje.py  0fba1afe90a7_cambiada_logica_y_estructura_de_consumo_.py  131e13c942a6_costos_refactrorizados_a_numeric.py  156312e3ce15_cambiada_relacion_de_orden_combustible_.py  192be8c0075b_agregada_columna_moneda_en_recibo.py  2310bce93ff9_eliminado_constraint_not_null_en_fecha_.py  2ac6881319cd_agregada_columna_de_estado_a_detalle_.py  2b841ed256c8_relacion_de_consumo_con_detalle_.py  35bf4b5ee63a_estrucutra_de_datos_historicos_para_el_.py  3a65e4fd7445_cambios_orden_de_combustible.py  42f6ec189b3e_modificaciones_a_thermmo_para_soportar_.py  4398d91d790f_total_y_subtotal_de_factura_puestos_.py  4b1816e0a2b9_repair_viaje_thermo_lookup.py  4e7b003ea188_agregada_columna_estado_para_thermo_.py  54b2201e25e9_columna_despacho_renombrada_a_viatico_.py  5774f502e33f_clase_viaje_cambiada_ahora_soporta_una_.py  5cc5b8b1a4f3_cascade_agregado_a_tablas_relacionadas_.py  678ba658910c_consumo_combustibe_eliminado_para_.py  6d7a5c6cee3e_cambiada_columna_fecha_movimiento_para_.py  728f3ebd6c6d_cambiado_atributo_detalle_operacion_de_.py  768ec63b26f8_agregada_columna_descripcion_a_tarifas_.py  76dbd71b91f8_actualizacion_de_enums_de_estados_de_.py  7794d427b400_agregada_columna_tasa_cambio_en_factura.py  7b21a6dfe92e_estado_facturacion_en_viaje.py  7c9e3f1a6d44_repair_viaje_reference_lookups.py  8aaccc7ea923_elimindas_constraints_en_las_subclases_.py  8e9ea98ee499_migraci├│n_inicial.py  9c4f3b2a1d7e_remediacion_facturas_decimal.py  9f2c4d1a7b3e_viaje_conductor_lookup_by_trip_type.py  a8f7c6d5e4b3_add_tasa_cambio_to_recibo.py  (+23 more)
scripts/: compile_qrc_assets.py
tests/: conftest.py
(+309 files in other folders)
